Package_Tools/include-C/gst/123_in_arbeit/sdp/gstsdpmessage.pp

(* Const before type ignored *)
function gst_sdp_media_insert_format(media:PGstSDPMedia; idx:Tgint; format:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_replace_format(media:PGstSDPMedia; idx:Tguint; format:Pgchar):TGstSDPResult;cdecl;external;
function gst_sdp_media_remove_format(media:PGstSDPMedia; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_add_format(media:PGstSDPMedia; format:Pgchar):TGstSDPResult;cdecl;external;
{ i=<session description>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_information(media:PGstSDPMedia):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_set_information(media:PGstSDPMedia; information:Pgchar):TGstSDPResult;cdecl;external;
{ c=<nettype> <addrtype> <connection-address>[/<ttl>][/<number of addresses>]  }
(* Const before type ignored *)
function gst_sdp_media_connections_len(media:PGstSDPMedia):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_connection(media:PGstSDPMedia; idx:Tguint):PGstSDPConnection;cdecl;external;
function gst_sdp_media_insert_connection(media:PGstSDPMedia; idx:Tgint; conn:PGstSDPConnection):TGstSDPResult;cdecl;external;
function gst_sdp_media_replace_connection(media:PGstSDPMedia; idx:Tguint; conn:PGstSDPConnection):TGstSDPResult;cdecl;external;
function gst_sdp_media_remove_connection(media:PGstSDPMedia; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_add_connection(media:PGstSDPMedia; nettype:Pgchar; addrtype:Pgchar; address:Pgchar; ttl:Tguint; 
           addr_number:Tguint):TGstSDPResult;cdecl;external;
{ b=<bwtype>:<bandwidth>  }
(* Const before type ignored *)
function gst_sdp_media_bandwidths_len(media:PGstSDPMedia):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_bandwidth(media:PGstSDPMedia; idx:Tguint):PGstSDPBandwidth;cdecl;external;
function gst_sdp_media_insert_bandwidth(media:PGstSDPMedia; idx:Tgint; bw:PGstSDPBandwidth):TGstSDPResult;cdecl;external;
function gst_sdp_media_replace_bandwidth(media:PGstSDPMedia; idx:Tguint; bw:PGstSDPBandwidth):TGstSDPResult;cdecl;external;
function gst_sdp_media_remove_bandwidth(media:PGstSDPMedia; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_add_bandwidth(media:PGstSDPMedia; bwtype:Pgchar; bandwidth:Tguint):TGstSDPResult;cdecl;external;
{ k=<method>:<encryption key>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_key(media:PGstSDPMedia):PGstSDPKey;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_set_key(media:PGstSDPMedia; _type:Pgchar; data:Pgchar):TGstSDPResult;cdecl;external;
{ a=...  }
(* Const before type ignored *)
function gst_sdp_media_attributes_len(media:PGstSDPMedia):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_attribute(media:PGstSDPMedia; idx:Tguint):PGstSDPAttribute;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_attribute_val(media:PGstSDPMedia; key:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_attribute_val_n(media:PGstSDPMedia; key:Pgchar; nth:Tguint):Pgchar;cdecl;external;
function gst_sdp_media_insert_attribute(media:PGstSDPMedia; idx:Tgint; attr:PGstSDPAttribute):TGstSDPResult;cdecl;external;
function gst_sdp_media_replace_attribute(media:PGstSDPMedia; idx:Tguint; attr:PGstSDPAttribute):TGstSDPResult;cdecl;external;
function gst_sdp_media_remove_attribute(media:PGstSDPMedia; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_add_attribute(media:PGstSDPMedia; key:Pgchar; value:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_get_caps_from_media(media:PGstSDPMedia; pt:Tgint):PGstCaps;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_set_media_from_caps(caps:PGstCaps; media:PGstSDPMedia):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_make_keymgmt(uri:Pgchar; base64:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_parse_keymgmt(msg:PGstSDPMessage; mikey:PPGstMIKEYMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_parse_keymgmt(media:PGstSDPMedia; mikey:PPGstMIKEYMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_attributes_to_caps(msg:PGstSDPMessage; caps:PGstCaps):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_attributes_to_caps(media:PGstSDPMedia; caps:PGstCaps):TGstSDPResult;cdecl;external;
{$endif}
{ __GST_SDP_MESSAGE_H__  }

implementation

{ was #define dname def_expr }
function GST_TYPE_SDP_MESSAGE : longint; { return type might be wrong }
  begin
    GST_TYPE_SDP_MESSAGE:=gst_sdp_message_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_SDP_MESSAGE_CAST(object : longint) : PGstSDPMessage;
begin
  GST_SDP_MESSAGE_CAST:=PGstSDPMessage(object);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_SDP_MESSAGE(object : longint) : longint;
begin
  GST_SDP_MESSAGE:=GST_SDP_MESSAGE_CAST(object);
end;


end.
